--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,10 @@
 
         {% if site.github.is_user_page %}
         
+        <a href="mailto:alekvasek@icloud.com?subject=Github">
+          <button id="btnMail">Contact Me!</button>
+        </a>
+        
         <p>
         <h3>About Me</h3>
         Hi, i'm Alek. In my spare time, I code in Python, work on project's with my dad, and explore the world with my family. I love cross country running, and playing complicated Bach pieces on my classical guitar.  I love the tranquil feel of fly fishing on a peaceful river in Calorado, and the sound of an elk, bugling from 50 yards away, in the middle of nowhere.
