--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
       text-decoration: none;
       display: inline-block;
       font-size: 16px;
+      font-family: Arial, Helvetica, sans-serif;
       margin: 4px 2px;
       transition-duration: 0.4s;
       cursor: pointer;
