--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,11 +8,11 @@
     <header class="header-home {% if site.animation %}animated{% endif %}">
         {% if site.about %}
             <a class="link" href="{{ site.url }}/about">
-                <img class="selfie" alt="{{ site.title }}" src="icon.png" />
+                <img class="selfie" alt="{{ site.title }}" src="https://alekthegenius.github.io/icon.png" />
             </a>
         {% else %}
             <span class="link">
-                <img class="selfie" alt="{{ site.title }}" src="icon.png" />
+                <img class="selfie" alt="{{ site.title }}" src="https://alekthegenius.github.io/icon.png" />
             </span>
         {% endif %}
 
