--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -3,10 +3,16 @@
 <div class="social-links">
     {% if site.facebook %}
         <a class="link" data-title="facebook.com/{{ site.facebook }}" href="https://facebook.com/{{ site.facebook }}" target="_blank" rel="noopener">
-            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-solid fa-user-robot"></i>
         </a>
     {% endif %}
 
+    {% if site.instructables %}
+        <a class="link" data-title="instructables.com/member/{{ site.instructables }}" href="instructables.com/member/{{ site.instructables}}" target="_blank" rel="noopener">
+            <i class="fa-brands fa-facebook"></i>
+        </a>
+    {% endif %}
+    
     {% if site.twitter %}
         <a class="link" data-title="twitter.com/{{ site.twitter }}" href="https://twitter.com/{{ site.twitter }}" target="_blank" rel="noopener">
             <i class="fa-brands fa-twitter"></i>
