--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -8,8 +8,8 @@
     {% endif %}
 
     {% if site.instructables %}
-        <a class="link" data-title="instructables.com/member/{{ site.instructables }}" href="instructables.com/member/{{ site.instructables}}" target="_blank" rel="noopener">
-            <i class="fa-brands fa-facebook"></i>
+        <a class="link" data-title="instructables.com/member/{{ site.instructables }}" href="htt[s://instructables.com/member/{{ site.instructables }}" target="_blank" rel="noopener">
+            <i class="fa-solid fa-user-robot"></i>
         </a>
     {% endif %}
     
