--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -9,7 +9,7 @@
 
     {% if site.instructables %}
         <a class="link" data-title="instructables.com/member/{{ site.instructables }}" href="htt[s://instructables.com/member/{{ site.instructables }}" target="_blank" rel="noopener">
-            <i class="fa-solid fa-robot">
+            <i class="fa-solid fa-robot"></i>
         </a>
     {% endif %}
     
