--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -8,7 +8,7 @@
     {% endif %}
 
     {% if site.instructables %}
-        <a class="link" data-title="instructables.com/member/{{ site.instructables }}" href="htt[s://instructables.com/member/{{ site.instructables }}" target="_blank" rel="noopener">
+        <a class="link" data-title="instructables.com/{{ site.instructables }}" href="https://instructables.com/member/{{ site.instructables }}" target="_blank" rel="noopener">
             <i class="fa-solid fa-robot"></i>
         </a>
     {% endif %}
