--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,7 +13,11 @@
                 </li>
             {% endif %}
         {% endif %}
-
+        
+        <li class="item">
+              <a class="link" href="{{ site.url }}/Aleks-Photos">Photos</a>
+        </li>
+        
         {% if site.projects == true %}
             {% if page.title != "Projects" %}
                 <li class="item">
