--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,8 @@
 
         <h1 class="title">{{ site.title }}</h1>
         <h2 class="description">{{ site.bio }}</h2>
-
+        <h2 class="description">If you Want to go Look at my Buisness Website Instead, Click <a class="link" data-title="https://alekthegenius.github.io/tech/" target="_blank" rel="noopener">Here</a></h2>
+       
         {% include social-links.html %}
     </header>
 {% endif %}
