--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -32,3 +32,15 @@
         // if you put some links in your bio. ;)
         a
             font-weight: 200
+            
+    > .buisness
+        font-size: 1.85rem
+        font-weight: $heavy-font
+        font-style: normal
+        color: $gama
+        width: 70%
+        margin: 0 auto 30px
+
+        // if you put some links in your bio. ;)
+        a
+            font-weight: 200
