--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -35,7 +35,7 @@
             
     > .buisness
         font-size: 1.85rem
-        font-weight: $heavy-font
+        font-weight: $thin-font
         font-style: normal
         color: $gama
         width: 70%
