--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
 
         <h1 class="title">{{ site.title }}</h1>
         <h2 class="description">{{ site.bio }}</h2>
-        <h2 class="buisness">If You Want go to my Developer Website Instead, Click <a class="link" href="{{ site.url }}/tech">Here</a></h2>
+        <h2 class="buisness">If you want go to my developer website instead, click <a class="link" href="{{ site.url }}/tech">Here</a></h2>
        
         {% include social-links.html %}
     </header>
