--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,6 +17,10 @@
         <li class="item">
               <a class="link" href="{{ site.url }}/Aleks-Photos">Photos</a>
         </li>
+
+        <li class="item">
+              <a class="link" href="{{ site.url }}/tech">Buisness Portfolio</a>
+        </li>
         
         {% if site.projects == true %}
             {% if page.title != "Projects" %}
