--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
         </li>
 
         <li class="item">
-              <a class="link" href="{{ site.url }}/tech">Buisness Portfolio</a>
+              <a class="link" href="{{ site.url }}/tech">Portfolio</a>
         </li>
         
         {% if site.projects == true %}
